Bug 496184 - Krviewer does not update window caption when file is saved with different name
Summary: Krviewer does not update window caption when file is saved with different name
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: krviewer (other bugs)
Version First Reported In: 2.7.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-12 16:48 UTC by Anton Astafiev
Modified: 2024-11-27 17:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
caption after saving (16.03 KB, image/png)
2024-11-12 16:48 UTC, Anton Astafiev
Details
caption before saving (19.05 KB, image/png)
2024-11-12 16:49 UTC, Anton Astafiev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Astafiev 2024-11-12 16:48:48 UTC
Created attachment 175765 [details]
caption after saving

SUMMARY
Krviewer does not update window caption after saving a file with different name.

STEPS TO REPRODUCE
1. Open existing file
2. Save it with other name

OBSERVED RESULT
Editor's caption (title) doesn't change value

EXPECTED RESULT
Editor's caption (title) should change value to the new name of file

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Linux 5.6.13-100.fc30.x86_64 #1 SMP Fri May 15 00:36:06 UTC 2020
KDE Plasma Version: 5.15.5-1.fc30.x86_64
KDE Frameworks Version: kf5-plasma-5.68.0-1.fc30.x86_64
Qt Version: 5.12.5

ADDITIONAL INFORMATION
Used krusader krviewer's editor
Comment 1 Anton Astafiev 2024-11-12 16:49:45 UTC
Created attachment 175767 [details]
caption before saving

caption before saving
Comment 2 Alex Bikadorov 2024-11-13 13:51:55 UTC
Bugfix: https://invent.kde.org/utilities/krusader/-/merge_requests/152
Comment 3 Alex Bikadorov 2024-11-27 10:44:41 UTC
Git commit 499b3cacd68ff0f2e314d46f2173ae5cbd90b455 by Alex Bikadorov, on behalf of Alexander Bikadorov.
Committed on 27/11/2024 at 10:42.
Pushed by abikadorov into branch 'master'.

KViewer: Fix url not changed after file is 'Saved as'

FIXED: [ 496184 ] Krviewer does not update window caption when file is saved with different name

M  +3    -1    app/KViewer/krviewer.cpp
M  +15   -14   app/KViewer/panelviewer.cpp
M  +1    -2    app/KViewer/panelviewer.h

https://invent.kde.org/utilities/krusader/-/commit/499b3cacd68ff0f2e314d46f2173ae5cbd90b455
Comment 4 Anton Astafiev 2024-11-27 14:56:26 UTC
(In reply to Alex Bikadorov from comment #3)
> Git commit 499b3cacd68ff0f2e314d46f2173ae5cbd90b455 by Alex Bikadorov, on
> behalf of Alexander Bikadorov.
> Committed on 27/11/2024 at 10:42.
> Pushed by abikadorov into branch 'master'.
> 
> KViewer: Fix url not changed after file is 'Saved as'
> 
> FIXED: [ 496184 ] Krviewer does not update window caption when file is saved
> with different name
> 
> M  +3    -1    app/KViewer/krviewer.cpp
> M  +15   -14   app/KViewer/panelviewer.cpp
> M  +1    -2    app/KViewer/panelviewer.h
> 
> https://invent.kde.org/utilities/krusader/-/commit/
> 499b3cacd68ff0f2e314d46f2173ae5cbd90b455

Thank you very much!
Comment 5 Anton Astafiev 2024-11-27 14:57:26 UTC
(In reply to Alex Bikadorov from comment #3)
> https://invent.kde.org/utilities/krusader/-/commit/
> 499b3cacd68ff0f2e314d46f2173ae5cbd90b455

Will it be backported somewhere?
Comment 6 Alex Bikadorov 2024-11-27 17:39:23 UTC
> Will it be backported somewhere?

No. But a new release is planned "soon".