KViewer: Fix url not changed after file is 'Saved as'

FIXED: [ 496184 ] Krviewer does not update window caption when file is saved with different name
BUG: 496184